Fixed overflow issue with Road map

--- a/assets/css/Navbar-Right-Links-Dark.css
+++ b/assets/css/Navbar-Right-Links-Dark.css
@@ -55,6 +55,9 @@
   border-radius: 50%;
 }
 
+.navbar {
+}
+
 .nav-item {
   font-weight: bold;
 }
